<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.nkullman.glog.startNewLogActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:rowCount="19"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/NewLogHeaderText"
            android:id="@+id/newLogHeaderText"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/vehicleYearLabel"
            android:id="@+id/vehicleYearLabel"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/vehicleYear_editText"
            android:layout_row="1"
            android:layout_column="3"
            android:hint="@string/vehicleYearHint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/vehicleMakeLabel"
            android:id="@+id/vehicleMakeLabel"
            android:layout_row="2"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vehicleMake_editText"
            android:layout_row="2"
            android:layout_column="3"
            android:hint="@string/vehicleMakeDummyText"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/vehicleModelLabel"
            android:id="@+id/vehicleModelLabel"
            android:layout_row="3"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vehicleModel_editText"
            android:layout_row="3"
            android:layout_column="3"
            android:hint="@string/vehicleModelHint"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/vehicleOdometerLabel"
            android:id="@+id/vehicleOdometerReadingLabel"
            android:layout_row="4"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/vehicleOdometerReading_editText"
            android:layout_row="4"
            android:layout_column="3"
            android:hint="@string/vehicleOdometerHint"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submitLogButtonText"
            android:id="@+id/submitLogbutton"
            android:layout_row="18"
            android:layout_column="0"
            android:layout_columnSpan="4" />
    </GridLayout>

</RelativeLayout>
