<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.nkullman.glog.WelcomeScreen">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:rowCount="19"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeScreen_headerText"
            android:id="@+id/textView_welcomeScreen_HeaderText"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="1" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logPicker_spinner"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_newEntry"
            android:id="@+id/button_newEntry"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="3"
            android:onClick="addNewEntry"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="8"
            android:text="@string/welcomeScreen_midTextNewLogPrompt"
            android:id="@+id/textView_welcomeScreen_midText"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_newLog"
            android:id="@+id/button_newLog"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="9"
            android:onClick="startNewLog"/>

    </GridLayout>
</RelativeLayout>
