<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.nkullman.glog.addNewEntryActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:rowCount="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Odometer reading*"
            android:id="@+id/odometerReadingLabel"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/odometerReading_editText"
            android:layout_row="0"
            android:layout_column="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Date*"
            android:id="@+id/dateLabel"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/price_per_gallon"
            android:id="@+id/pricePerGalLabel"
            android:layout_row="2"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/date_editText"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/dd_mm_yyyy" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/pricePerGal_editText"
            android:layout_row="2"
            android:layout_column="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/gallons_filled"
            android:id="@+id/galsLabel"
            android:layout_row="3"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/gals_editText"
            android:layout_row="3"
            android:layout_column="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/location"
            android:id="@+id/locationLabel"
            android:layout_row="4"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location_editText"
            android:layout_row="4"
            android:layout_column="3"
            android:text="&quot;Sequim, WA&quot;"
            android:inputType="textCapSentences" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/filling_station"
            android:id="@+id/stationLabel"
            android:layout_row="5"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/station_editText"
            android:layout_row="5"
            android:layout_column="3"
            android:text="&quot;QuikTrip, Shell, BP, etc.&quot;"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/notes"
            android:id="@+id/notesLabel"
            android:layout_row="7"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/editText"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:text="@string/demoNoteField" />
    </GridLayout>
</RelativeLayout>
